--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="/images/software.jpg" alt="software" height="400" width="100">
+                <img src="images/software.jpg" alt="software" height="400" width="100">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -114,7 +114,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="/images/workimage 1.jpg" alt="work image 1" height="500">
+                <img src="images/workimage 1.jpg" alt="work image 1" height="500">
                 <div class="layer">
                     <h3>social media App</h3>
                     <p>The app contains you the talanted people around the world.
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/images/workimage 2.webp" alt="work image 2" height="500"><div class="layer">
+                <img src="images/workimage 2.webp" alt="work image 2" height="500"><div class="layer">
                     <h3>Music App</h3>
                     <p>The app contains you the talanted people around the world.
                         Download it from playstore.</p>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/images/workimage 3.png" alt="work image 3" height="500">
+                <img src="images/workimage 3.png" alt="work image 3" height="500">
                 <div class="layer">
                     <h3>Online Shopping App</h3>
                     <p>The app contains you the talanted people around the world.
