--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/workimage 1.jpg" alt="work image 1" height="500">
+                <img src="images/workimage 1.jpg" alt="workimage 1" height="500">
                 <div class="layer">
                     <h3>social media App</h3>
                     <p>The app contains you the talanted people around the world.
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/workimage 2.webp" alt="work image 2" height="500"><div class="layer">
+                <img src="images/workimage 2.webp" alt="workimage 2" height="500"><div class="layer">
                     <h3>Music App</h3>
                     <p>The app contains you the talanted people around the world.
                         Download it from playstore.</p>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/workimage 3.png" alt="work image 3" height="500">
+                <img src="images/workimage 3.png" alt="workimage 3" height="500">
                 <div class="layer">
                     <h3>Online Shopping App</h3>
                     <p>The app contains you the talanted people around the world.
@@ -151,7 +151,7 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fa-solid fa-paper-plane"></i>ambatisahithya2003@gmail.com</p>
-                <p><i class="fa-solid fa-phone"></i></p>987654321</p>
+                <p><i class="fa-solid fa-phone"></i>987654321</p>
                 <div class="social-icons">
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-square-instagram"></i></i></a>
